--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ worker_processes 1;
 user nobody nogroup;
 # 'user nobody nobody;' for systems with 'nobody' as a group instead
 pid /tmp/nginx.pid;
-error_log /var/log/nginx/error.log;
+error_log /dev/stdout;
 
 events {
   worker_connections 1024; # increase if you have lots of clients
@@ -16,7 +16,7 @@ http {
   include mime.types;
   # fallback in case we can't determine a type
   default_type application/octet-stream;
-  access_log /var/log/nginx/access.log combined;
+  access_log /dev/stdout combined;
   sendfile on;
 
   upstream app_server {
