--- a/wercker.yml
+++ b/wercker.yml
@@ -419,8 +419,8 @@ deploy:
           export POSTGIS_ENV_POSTGRES_PASSWORD=${POSTGIS_ENV_POSTGRES_PASSWORD}
           export POSTGIS_ENV_POSTGRES_DB=${POSTGIS_ENV_POSTGRES_DB}
           export DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
-          export DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
-          export DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
+          export LOGSTASH_HOST=${LOGSTASH_HOST}
+          export LOGSTASH_PORT=${LOGSTASH_PORT}
           if [ -z "$DEBUG" ]; then
               echo "DOCKER-COMPOSE CONFIG: \n"
               docker-compose config
