--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,9 @@
 build:
     tests:
         override:
-            - ./run-tests.sh
-        coverage:
-            file: '.coverage'
-            config_file: '.coveragerc'
-            format: 'py-cc'
+            -
+                command: './run-tests.sh'
+                coverage:
+                    file: '.coverage'
+                    config_file: '.coveragerc'
+                    format: 'py-cc'
