--- a/wercker.yml
+++ b/wercker.yml
@@ -81,10 +81,6 @@ dev:
         code: |
           python manage.py loaddata payments/fixtures/payment_preference.json
     - script:
-        name: Django import Payment CmsPage fixture
-        code: |
-          python manage.py loaddata articles/fixtures/cmspages.json
-    - script:
         name: Django import Withdraw address fixture
         code: |
           python manage.py loaddata core/fixtures/withdraw_address.json
@@ -99,13 +95,13 @@ dev:
     - script:
         name: Django import Ticker fixtures
         code: |
-          if [! -z LOCAL_CMS] && [ ${LOCAL_CMS} -eq 1 ] then
+          if [ ! -z LOCAL_CMS] && [ ${LOCAL_CMS} -eq 1 ] then
             python manage.py loaddata articles/fixtures/articles.json
           fi
     - script:
         name: Django import Ticker fixtures
         code: |
-          if [! -z LOCAL_TICKER] &&[ ${LOCAL_TICKER} -eq 1 ] then
+          if [ ! -z LOCAL_TICKER] && [ ${LOCAL_TICKER} -eq 1 ] then
             python manage.py loaddata ticker/fixtures/ticker.json
           fi
     - script:
@@ -315,11 +311,13 @@ build:
           echo "To load the 'withdraw_address' fixture, uncomment the next line"
           # python manage.py loaddata core/fixtures/withdraw_address.json
 
-          if [! -z $CMS_FROM_FIXTURE] && [ ${CMS_FROM_FIXTURE} -eq 1 ] then
+          if [ ! -z $CMS_FROM_FIXTURE] && [ ${CMS_FROM_FIXTURE} -eq 1 ]
+          then
             python manage.py loaddata articles/fixtures/articles.json
           fi
 
-          if [! -z $CMS_FROM_FIXTURE] && [ ${TICKER_FROM_FIXTURE} -eq 1 ] then
+          if [ ! -z $CMS_FROM_FIXTURE] && [ ${TICKER_FROM_FIXTURE} -eq 1 ]
+          then
             python manage.py loaddata ticker/fixtures/ticker.json
           fi
 
