--- a/wercker.yml
+++ b/wercker.yml
@@ -95,14 +95,14 @@ dev:
     - script:
         name: Django import Ticker fixtures
         code: |
-          if [ ! -z LOCAL_CMS] && [ ${LOCAL_CMS} -eq 1 ]
+          if [ ! -z $LOCAL_CMS] && [ ${LOCAL_CMS} -eq 1 ]
           then
             python manage.py loaddata articles/fixtures/articles.json
           fi
     - script:
         name: Django import Ticker fixtures
         code: |
-          if [ ! -z LOCAL_TICKER] && [ ${LOCAL_TICKER} -eq 1 ]
+          if [ ! -z $LOCAL_TICKER] && [ ${LOCAL_TICKER} -eq 1 ]
           then
             python manage.py loaddata ticker/fixtures/ticker.json
           fi
