Feature/refactor payments (#184)
* stop annying emails, add uphold btc card param to env

* encaps data

* more stuff

* remove wercker from data

* remove wercker from data

* make order buy work

* fix the damn tests

* fix damn tests, damn css and javascripts

* warnings, confirmations

* fixy fix

* refactor api clients WIP

* added many-to-many to paymentpreference-user

* wip2 unique payment preferences by user identifier and method

* wip2 unique payment preferences by user identifier and method - migrations

* intermidiate state with tests

* finished payment and order release refactoring

* modify celery schedule, invoke order release appropreate task from payment import

* fixes for next task execution

* made next task interface clearer

* Fixing all tests and regressions, added order field: from_default_rule

* add redis as a service in tests

--- a/wercker.yml
+++ b/wercker.yml
@@ -458,6 +458,9 @@ deploy:
           docker-compose -f /nexchange/docker-compose.yml up -d
         EOF
 tests:
+  - name: redis
+     id: redis
+     cmd: redis-server
   steps:
     - script:
         name: Install python requirements
