Feature/modular tasks multi ticket multi currencies (#189)
* WIP: Order status Choices instead of booleans -  unit tests pass

* WIP: Order status Choices instead of booleans -  Ctrl-F old fields + monkey testing

* WIP: Order status Choices instead of booleans -  fix sell_order_release test cases

* WIP: add order_type EXCHANGE, help_text's to order 'choice' fileds

* WIP: add order_type EXCHANGE, help_text's to order 'choice' fileds: validators and tests

* WIP: from/to currencies and amounts on Order: pass unit test

* WIP: from/to currencies and amounts on Order: possible to autopay with Okpay and Payeer. bugs with ticker

* WIP: add all fiat models rates, prices from fixer to Price model

* Kraken ticker for BTC-LTC BTC-ETH prices

* WIP: changeg Ticker, Pair modules, Price renewed. Tests failing

* WIP: select2 + pk instead of ORM object in the celery task kawargs

* 3 feature branches merged with passing tests

* increase lock cool-off time in tests so wercker wont complain (hopefully)

--- a/wercker.yml
+++ b/wercker.yml
@@ -73,6 +73,10 @@ dev:
         code: |
           python manage.py loaddata core/fixtures/currency.json
     - script:
+        name: Django import Pair fixture
+        code: |
+          python manage.py loaddata core/fixtures/pair.json
+    - script:
         name: Django import Payment Methods fixture
         code: |
           python manage.py loaddata payments/fixtures/payment_method.json
@@ -106,10 +110,6 @@ dev:
           then
             python manage.py loaddata ticker/fixtures/ticker.json
           fi
-    - script:
-        name: Django run ticker update prices command
-        code: |
-          python manage.py ticker
     - script:
         name: Link pre-commit hook script
         code: |
@@ -378,7 +378,6 @@ build:
     - script:
         name: Add cron jobs
         code: |
-          chmod +x /ticker.sh
           chmod +x /celery_dump_events.sh
           echo "* * * * * root /ticker.sh" > /etc/crontab
           # monitor celery events and dispatch to ELK stack every 5 minutes
