--- a/wercker.yml
+++ b/wercker.yml
@@ -190,6 +190,7 @@ build:
           # python manage.py compilemessages
     - maxon/npm-run:
         script: build-js
+    - script:
       name: copy files
       code: |
         mkdir -p /usr/src/app
