Bug/trigger release at withdrawl address definition (#212)
* send release task after withdrawal address is defined

* wait for user to define withdraw address before release task

* retry release by reference if user is slow to set withdraw address

* wercker: alernative approach to collect static

* fix all tests, fix buy workflow

--- a/wercker.yml
+++ b/wercker.yml
@@ -191,6 +191,10 @@ build:
     - maxon/npm-run:
         script: build-js
     - script:
+      name:
+      code: |
+        yes | python manage.py collectstatic
+    - script:
       name: copy files
       code: |
         mkdir -p /usr/src/app
@@ -202,6 +206,7 @@ build:
         code: |
           mv "nginx.conf" "$WERCKER_OUTPUT_DIR/nginx.conf"
           mv "docker-compose.yml" "$WERCKER_OUTPUT_DIR/docker-compose.yml"
+
     - create-file:
         #
         # PEM_FILE_CONTENT - the key to SSH into server (create key par via wercker web interface. remeber to install public key on server)
@@ -322,7 +327,7 @@ build:
 
           # Copy static data to nginx volume
           cp -ra $WERCKER_OUTPUT_DIR/mediafiles/* /usr/share/nginx/html/media
-          yes | python manage.py collectstatic
+          cp -ra $WERCKER_OUTPUT_DIR/staticfiles/* /usr/share/nginx/html/static
           #
           # Create superuser
           echo "from django.contrib.auth.models import User; User.objects.create_superuser('onit', 'weare@onit.ws','weare0nit')" | python manage.py shell
@@ -348,24 +353,6 @@ build:
         name: set entrypoint as executable
         code: |
           chmod +x /entrypoint.sh
-
-    - create-file:
-        name: Create cron invoked script to run ticker
-        filename: /ticker.sh
-        overwrite: true
-        content: |-
-          #!/bin/bash
-          #
-          export DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
-          export POSTGIS_ENV_POSTGRES_USER=${POSTGIS_ENV_POSTGRES_USER}
-          export POSTGIS_ENV_POSTGRES_PASSWORD=${POSTGIS_ENV_POSTGRES_PASSWORD}
-          export POSTGIS_ENV_POSTGRES_DB=${POSTGIS_ENV_POSTGRES_DB}
-          export POSTGIS_PORT_5432_TCP_ADDR=${POSTGIS_PORT_5432_TCP_ADDR}
-          export POSTGIS_PORT_5432_TCP_PORT=${POSTGIS_PORT_5432_TCP_PORT}
-          export SECRET_KEY='${SECRET_KEY}'
-          #
-          cd ${WERCKER_SOURCE_DIR}
-          /usr/local/bin/python manage.py ticker --settings=nexchange.settings_prod >> /dev/stdout 2>&1
     - create-file:
         name: Create cron invoked script to dump celery events
         filename: /celery_dump_events.sh
@@ -379,9 +366,9 @@ build:
         name: Add cron jobs
         code: |
           chmod +x /celery_dump_events.sh
-          echo "* * * * * root /ticker.sh" > /etc/crontab
           # monitor celery events and dispatch to ELK stack every 5 minutes
           echo "*/5 * * * * root /celery_dump_events.sh" >> /etc/crontab
+          # start cron
           cron
     - script:
         name: echo python information
