--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ PySocks>=1.5.7
 python-dateutil>=2.5.3
 pytz>=2016.6.1
 redis>=2.10.5
+django-redis>=4.7.0
 requests>=2.11.1
 requests-mock>=1.0.0
 rq>=0.6.0
