--- a/package.json
+++ b/package.json
@@ -1,14 +1,36 @@
 {
   "name": "nexchange",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Nexchange Project",
-  "main": "index.js",
   "dependencies": {
-    "bower": "~1.7.9",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "bootstrap-loader": "^2.0.0-beta.22",
+    "bootstrap-sass": "^3.3.7",
+    "browserify": "<14",
+    "card": "^2.1.1",
+    "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.1",
+    "intl-tel-input": "^11.0.4",
+    "jquery": "^2.2.0",
+    "js-cookie": "^2.1.3",
+    "moment-timezone": "^0.5.11",
+    "node-sass": "^4.5.0",
+    "nprogress": "^0.2.0",
+    "resolve-url-loader": "^2.0.0",
+    "style-loader": "^0.13.2",
     "toastr": "^2.1.2",
-    "browserify": "<14"
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "x-editable": "^1.5.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react": "^6.23.0",
     "htmllint-cli": "0.0.5",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
@@ -20,16 +42,16 @@
     "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
+    "node-sass": "^4.5.0",
     "phantomjs-prebuilt": "~2.1",
-    "watchify": "latest"
+    "sass": "^0.5.0",
+    "sass-loader": "^6.0.2",
+    "watchify": "latest",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "test": "karma start --single-run",
-    "bower": "cd static && bower install --allow-root && cd - ",
-    "bower-prd": "cd static && bower install --allow-root --production && cd - ",
-    "lint": "jshint static/js/**",
-    "build-js": "browserify static/js/main.js > static/dist/js/bundle.js",
-    "watch-js": "watchify static/js/main.js -o static/dist/js/bundle.js -v"
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -40,8 +62,6 @@
     "nexchange",
     "onitsoft"
   ],
-  "author": "onitsoft",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/onitsoft/nexchange/issues"
   },
