--- a/wercker.yml
+++ b/wercker.yml
@@ -66,9 +66,9 @@ dev:
           celery worker -A nexchange --uid=celery_user -l info -f /var/log/celeryd.log &
           celery beat -A nexchange -l info -f /var/log/celery-beat.log &
     - script:
-        name: Django compile messages
+        name: Django collect & compile messages
         code: |
-            # python manage.py compilemessages
+          bash ./collect_translations.sh
     - script:
       name: Django create superuser
       code: |
@@ -158,11 +158,10 @@ build:
         name: Django migrations
         code: |
           python manage.py makemigrations
-            w | python manage.py makemigrations --merge
     - script:
         name: django compile translations
         code: |
-          # python manage.py compilemessages
+           bash ./collect_translations.sh
     - script:
         name: create/validate static build roots
         code: |
