--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
     "bootstrap-sass": "^3.3.7",
     "browserify": "<14",
     "card": "^2.1.1",
+    "commonjs-highcharts": "^4.0.3",
     "css-loader": "^0.26.2",
+    "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
+    "font-awesome": "^4.7.0",
+    "highcharts": "^5.0.7",
     "intl-tel-input": "^11.0.4",
     "jquery": "^2.2.0",
+    "jquery-ticker": "^1.0.0",
+    "jquery-ui": "^1.12.1",
     "js-cookie": "^2.1.3",
     "moment-timezone": "^0.5.11",
     "node-sass": "^4.5.0",
     "nprogress": "^0.2.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "resolve-url-loader": "^2.0.0",
+    "select2": "^4.0.3",
     "style-loader": "^0.13.2",
     "toastr": "^2.1.2",
     "url-loader": "^0.5.8",
