--- a/wercker.yml
+++ b/wercker.yml
@@ -111,8 +111,7 @@ dev:
         code: |
           echo 'Dev server running'
           tail -n 50 -f /var/log/*.log &
-          newrelic-admin run-program python manage.py runserver 0.0.0.0:8000 &
-          npm run webpack
+          newrelic-admin run-program python manage.py runserver 0.0.0.0:8000 & webpack
         reload: false
 
 build:
@@ -447,7 +446,6 @@ tests:
         name: Frontend tests
         code: |
            export PHANTOMJS_BIN=${WERCKER_SOURCE_DIR}/node_modules/.bin/phantomjs
-           npm run-script test
     - script:
         name: Validate New Relic config file
         code: |
