--- a/wercker.yml
+++ b/wercker.yml
@@ -111,7 +111,7 @@ dev:
         code: |
           echo 'Dev server running'
           tail -n 50 -f /var/log/*.log &
-          newrelic-admin run-program python manage.py runserver 0.0.0.0:8000 & webpack
+          newrelic-admin run-program python manage.py runserver 0.0.0.0:8000
         reload: false
 
 build:
