--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "node-sass": "^4.5.0",
     "phantomjs-prebuilt": "~2.1",
+    "react-hot-loader": "^1.3.1",
     "sass": "^0.5.0",
     "sass-loader": "^6.0.2",
     "watchify": "latest",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-bundle-tracker": "^0.2.0",
+    "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
     "test": "karma start --single-run",
