--- a/wercker.yml
+++ b/wercker.yml
@@ -53,7 +53,7 @@ dev:
       name: Install node requirements
       code: |
         rm -fr node_modules && npm install
-        ./node_modules/.bin/webpack --config webpack.config.js
+        cd /pipeline/source && webpack --config webpack.config.js
     - script:
       name: collect static
       code: |
@@ -441,7 +441,7 @@ tests:
       code: |
         # https://github.com/wercker/support/issues/227 :(
         rm -fr node_modules && npm install --production
-        ./node_modules/.bin/webpack --config webpack.config.js
+        cd /pipeline/source .. webpack --config webpack.config.js
     - script:
       name: collect static
       code: |
