--- a/wercker.yml
+++ b/wercker.yml
@@ -163,8 +163,8 @@ build:
       name: Install node requirements
       code: |
         # https://github.com/wercker/support/issues/227 :(
-        rm -fr node_modules && npm install --production
-        ./node_modules/.bin/webpack --config webpack.config.js
+        rm -fr node_modules && npm install
+        cd /pipeline/source && webpack --config webpack.config.js
     - script:
       name: collect static
       code: |
@@ -440,8 +440,8 @@ tests:
       name: Install node requirements
       code: |
         # https://github.com/wercker/support/issues/227 :(
-        rm -fr node_modules && npm install --production
-        cd /pipeline/source .. webpack --config webpack.config.js
+        rm -fr node_modules && npm install
+        cd /pipeline/source && webpack --config webpack.config.js
     - script:
       name: collect static
       code: |
